Changed styling from filter(saturation) to a transparent background color to differentiate between selected and default items, as 'filter' effects were causing performance issues on mobile devices.

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ noscript {
 }
 
 .list_item {
-	background-image: url('https://www.pathofexile.com/image/shop/deal-background-large.png');
+	background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://www.pathofexile.com/image/shop/deal-background-large.png');
 	background-position: -5px -5px;
 	min-width: 281px;
 	width: 281px;
@@ -115,7 +115,6 @@ noscript {
 	text-align: center;
 	margin: 0 auto 90px auto;
 	box-shadow: inset 0 0 5px 1px;
-	filter: saturate(0.6);
 	border-radius: 3px;
 }
 
@@ -197,7 +196,7 @@ input[type="checkbox"]:checked + .label-text:before {
 
 .selected {
 	color: #00ff00;
-	filter: saturate(1);
+	background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.1)), url(https://www.pathofexile.com/image/shop/deal-background-large.png);
 }
 
 .label-text {
